force-app/main/default/objects/SAJ_Release_Environment__c/SAJ_Release_Environment__c.object-meta.xml
<CustomObject>
    <description>This is a junction object between Release and Environment. This holds specifics of build with respect to environment</description>
    <label>Release Environment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Release Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Environments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>