force-app/main/default/objects/SAJ_Release_Environment__c/fields/Jenkins_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Jenkins_Job_Status__c</fullName>
    <description>Attribute to store the status of Jenkins Job(Allowed Values: New,Building,Cancelled,Failed,Success)</description>
    <label>Jenkins Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>