force-app/main/default/objects/SAJ_Release_Environment__c/fields/SAJ_Environment__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Environment record where release is being deployed to.</description>
    <label>Environment</label>
    <referenceTo>SAJ_Environment__c</referenceTo>
    <relationshipLabel>Release Environments</relationshipLabel>
    <relationshipName>Release_Environments_del</relationshipName>
    <type>Lookup</type>
</CustomField>