force-app/main/default/objects/SAJ_Release_Environment__c/fields/SAJ_Exception__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Exception__c</fullName>
    <description>Attribute to store any exceptions occurred during deployment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>