force-app/main/default/objects/SAJ_Release_Environment__c/fields/SAJ_Jenkins_Build__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Jenkins_Build__c</fullName>
    <description>Attribute to store URL of Jenkins build for current deployment.</description>
    <label>Jenkins Build</label>
    <type>Url</type>
</CustomField>