force-app/main/default/objects/SAJ_Release_Environment__c/fields/SAJ_Jenkins_Build_Log__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Jenkins_Build_Log__c</fullName>
    <description>Attribute to store complete log of the Jenkins Build</description>
    <label>Jenkins Build Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>