force-app/main/default/objects/SAJ_Release_Environment__c/fields/SAJ_Jenkins_Job_Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Jenkins_Job_Execution_Time__c</fullName>
    <description>Total time taken to execute the Jenkins Job</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Jenkins Job Execution Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>