force-app/main/default/objects/SAJ_Release_Environment__c/fields/SAJ_Release__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Release__c</fullName>
    <description>Master-Detail to the Release record.</description>
    <label>Release</label>
    <referenceTo>SAJ_Release__c</referenceTo>
    <relationshipLabel>Release Environments</relationshipLabel>
    <relationshipName>Release_Environments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>