force-app/main/default/objects/SAJ_Release_Environment__c/fields/SAJ_Sonar_Check__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Sonar_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag to identify if Sonar is green for the release.</description>
    <label>Sonar Check Completed ?</label>
    <type>Checkbox</type>
</CustomField>