force-app/main/default/objects/SAJ_Release_Environment__c/fields/SAJ_Status__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Status__c</fullName>
    <description>Status of the release environment record(Allowed values: New,Completed,In-Progress)</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>