force-app/main/default/objects/SAJ_Release_Environment__c/fields/SAJ_Test_Class_Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Test_Class_Execution_Time__c</fullName>
    <description>Total time taken to execute the Test classes</description>
    <label>Test Class Execution Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>