force-app/main/default/objects/SAJ_Release_Environment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SAJ_Jenkins_Build__c</columns>
    <columns>SAJ_Release__c</columns>
    <columns>SAJ_Environment__c</columns>
    <columns>Jenkins_Job_Status__c</columns>
    <columns>SAJ_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>